--- a/Frontend/src/Components/styles/Categories.css
+++ b/Frontend/src/Components/styles/Categories.css
@@ -4,7 +4,7 @@ main.table {
     background-color: #fff5;
     backdrop-filter: blur(7px);
     box-shadow: 0 .4rem .8rem #0005;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .table__header {
