--- a/Frontend/src/Components/styles/DetailCard.css
+++ b/Frontend/src/Components/styles/DetailCard.css
@@ -50,6 +50,7 @@
     flex-direction: row;
     gap: 5px;
     align-items: center;
+    margin: 10px 0;
 }
 
 .detail-conainer {
@@ -173,7 +174,59 @@
     align-items: center;
 }
 
+@media (min-width: 320px) and (max-width: 480px) {
+
+    .detail-vehicle img{
+        margin-top: 0 !important;
+    }
+
+    .detail-vehicle-title h1{
+        font-size: 20px;
+        margin: 0;
+    }
+
+}
+
+
+
 @media (max-width: 768px) {
+
+    .caracteristicas-list-container {
+        justify-content: start;
+        gap: 20px;
+    }
+
+    .detail-vehicle{
+        align-items: start;
+    }
+
+    .detail-vehicle img{
+        margin-top: 10px;
+    }
+
+    .detail-vehicle-title h1{
+        margin: 0;
+    }
+
+    .detail-vehicle-title {
+        flex-direction: column;
+        align-items: start;
+    }
+
+    .resenia-content {
+        margin: 0 20px;
+        padding: 10px;
+        border-radius: 10px;
+        width: 100%;
+        box-shadow: 0 5px 7px rgba(0, 0, 0, 0.1);
+        margin: 20px 0;
+    }
+
+
+    .resenia-content-rating{
+        flex-direction: column;
+    }
+
     .error-calendar {
         display: flex;
         flex-direction: column;
