--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -49,7 +49,7 @@ textarea {
   padding: 3px;
 }
 
-button:hover{
+button:hover {
   cursor: pointer;
 }
 
@@ -62,7 +62,16 @@ table {
 
 }
 
-ul{
+#wpButton {
+  position: fixed;
+  bottom: 5%;
+  right: 1%;
+  z-index: 1000;
+  background-color: transparent;
+  border: none;
+}
+
+ul {
   padding: 0;
 }
 
@@ -95,27 +104,53 @@ tr:nth-child(even) {
 }
 
 .spinner-container {
-  background-color: rgba(255, 255, 255, 0.7); /* Fondo blanco pálido con opacidad */
-  padding: 20px; /* Agrega un poco de espacio alrededor del spinner */
-  border-radius: 8px; /* Ajusta según sea necesario */
+  background-color: rgba(255, 255, 255, 0.7);
+  /* Fondo blanco pálido con opacidad */
+  padding: 20px;
+  /* Agrega un poco de espacio alrededor del spinner */
+  border-radius: 8px;
+  /* Ajusta según sea necesario */
 }
 
-.overlaySpinner{
+.overlaySpinner {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  background: rgba(255, 255, 255, 1); /* Fondo blanco semitransparente para el efecto de desenfoque */
+  background: rgba(255, 255, 255, 1);
+  /* Fondo blanco semitransparente para el efecto de desenfoque */
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.hidden{
+.hidden {
   display: none;
 }
 
 input[type="file"] {
   display: none;
+}
+
+.modal {
+  width: 30%;
+}
+
+/* Estilos para pantallas entre 480px y 1280px */
+@media screen and (max-width: 1280px) and (min-width: 480px) {
+  .modal {
+    width: 80%;
+  }
+
+
+}
+
+/* Estilos para pantallas entre 320px y 480px */
+@media screen and (max-width: 480px) and (min-width: 320px) {
+  .modal {
+    width: 100%;
+  }
+
+
 }
